k8s/journal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: journal-service
  namespace: devops-platform
spec:
  selector:
    app: journal-service
  ports:
    - port: 8000
      targetPort: 8000
