k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: devops-platform-ingress
  namespace: devops-platform
spec:
  ingressClassName: traefik
  rules:
    - host: auth.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auth-service
                port:
                  number: 8000
    - host: product.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: journal-service
                port:
                  number: 8000
